fix "subreddit" capitalization add prestige to subreddituserflair

--- a/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/_subreddits.cshtml
+++ b/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/_subreddits.cshtml
@@ -29,7 +29,7 @@
         </tbody>
         <tfoot>
             <tr ng-show="!subs.length && !loading">
-                <td colspan="2"><i>No subReddits are registered.</i></td>
+                <td colspan="2"><i>No subreddits are registered.</i></td>
             </tr>
             <tr ng-show="loading">
                 <td colspan="2"><i class="fa fa-spin fa-spinner"></i> <i>Loading...</i></td>
