--- a/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/_subscriptions.cshtml
+++ b/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/_subscriptions.cshtml
@@ -17,7 +17,7 @@
                         <h4 class="modal-title">Auto Detection Results</h4>
                     </div>
                     <div class="modal-body">
-                        <p>The following SubReddits can be linked:</p>
+                        <p>The following Subreddits can be linked:</p>
                         <div class="row" style="height: 80px; overflow: auto">
                             <ul>
                                 <li ng-repeat="item in dialog.items">
@@ -45,7 +45,7 @@
         <table class="table" style="width: 480px">
             <thead>
                 <tr>
-                    <th style="width: 50%">SubReddit</th>
+                    <th style="width: 50%">Subreddit</th>
                     <th>Status</th>
                     <th>Functions</th>
                 </tr>
