--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <header class="container">
-      <h1 class="text-center"><a href="http://championmains-pyrobot.azurewebsites.net/">/r/ChampionMains Flairs</a></h1>
+    <header class="container text-center">
+      <h1><a href="http://championmains-pyrobot.azurewebsites.net/">/r/ChampionMains Flairs</a></h1>
+      <h4>Documentation</h4>
     </header>
-    <div class="container">{{ content }}</div>
+    <div class="container content">{{ content }}</div>
     <hr />
     <footer class="container">
       <p><small>Updated on {{ site.time }}</small></p>
