--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -3,44 +3,44 @@
 <h1 class="text-center"><span class="rank" ng-class="'rank-' + api.summoners[0].tierString"></span> /u/@User.Identity.Name</h1>
 
 <button type="button" class="btn btn-primary" ng-click="registerSummoner()">
-    <i class="fa fa-bars"></i> Link Summoner
+    <i class="fa fa-plus"></i> Add Summoner
 </button>
 
 <table class="table">
     <thead>
-    <tr>
-        <th><span ng-class="{ 'fade-out': !api.loading }" class="fa fa-refresh spinning fade"></span></th>
-        <th>Region</th>
-        <th>Summoner</th>
-        <th>Rank</th>
-        <th>Mastery Points</th>
-    </tr>
+        <tr>
+            <th><span ng-class="{ 'fade-out': !api.loading }" class="fa fa-refresh spinning fade"></span></th>
+            <th>Region</th>
+            <th>Summoner</th>
+            <th>Rank</th>
+            <th>Mastery Points</th>
+        </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="summoner in api.summoners | filter:'!hidden' | orderBy:'totalPoints':true track by summoner.id">
-        <td>
-            <div class="btn-group btn-group-xs">
-                <button class="btn btn-default" href="#" ng-click="refreshSummoner(summoner)"><span class="fa fa-refresh"></span></button>
-                <button class="btn btn-danger" href="#" ng-click="deleteSummoner(summoner)"><span class="fa fa-times"></span></button>
-            </div>
-        </td>
-        <td ng-bind="summoner.region"></td>
-        <td ng-bind="summoner.name"></td>
-        <td>
-            <span ng-show="summoner.rank" class="rank sm" ng-class="'rank-' + summoner.tierString"></span>
-            <span ng-bind="summoner.rank"></span>
-            <span class="hint" ng-hide="summoner.rank" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
-        </td>
-        <td>
-            <span ng-show="summoner.rank" ng-bind="summoner.totalPoints | number"></span>
-            <span class="hint" ng-hide="summoner.rank" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
-        </td>
-    </tr>
+        <tr ng-repeat="summoner in filteredSummoners = (api.summoners | filter:'!hidden' | orderBy:'totalPoints':true) track by summoner.id">
+            <td>
+                <div class="btn-group btn-group-xs">
+                    <button class="btn btn-default" href="#" ng-click="refreshSummoner(summoner)"><span class="fa fa-refresh"></span></button>
+                    <button class="btn btn-danger" href="#" ng-click="deleteSummoner(summoner)"><span class="fa fa-times"></span></button>
+                </div>
+            </td>
+            <td ng-bind="summoner.region"></td>
+            <td ng-bind="summoner.name"></td>
+            <td>
+                <span ng-show="summoner.rank" class="rank sm" ng-class="'rank-' + summoner.tierString"></span>
+                <span ng-bind="summoner.rank"></span>
+                <span class="hint" ng-hide="summoner.rank" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
+            </td>
+            <td>
+                <span ng-show="summoner.rank" ng-bind="summoner.totalPoints | number"></span>
+                <span class="hint" ng-hide="summoner.rank" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
+            </td>
+        </tr>
     </tbody>
     <tfoot>
-    <tr ng-show="summoners.items.length == 0">
-        <td colspan="5">No summoners linked.</td>
-    </tr>
+        <tr ng-show="filteredSummoners.length == 0">
+            <td colspan="5">Click "Add Summoner" to link a summoner.</td>
+        </tr>
     </tfoot>
 </table>
 
@@ -48,50 +48,49 @@
 
 <table class="table table-pad">
     <thead>
-    <tr>
-        <th style="width: 40%;">Flair</th>
-        <th>Subreddit</th>
-        <th>Mastery</th>
-    </tr>
-    </thead>
+        <tr>
+            <th style="width: 50%;">Flair (Rank/Mastery/Prestige/Text)</th>
+            <th>Subreddit</th>
+            <th>Mastery</th>
+        </tr>
+    </thead>    
     <tbody>
-    <tr ng-repeat="subreddit in api.subreddits | orderBy:'api.champions[subreddit.championId].points':true track by subreddit.id">
-        <td>
-            <form ng-submit="updateSubredditFormSubmit(subreddit.flair, subreddit)" class="flair-toggles input-group input-group-sm">
-                <span class="input-group-btn">
-                    <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.rankEnabled }">
-                        <input ng-model="subreddit.flair.rankEnabled" ng-disabled="!subreddit.rankEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
-                        <span class="rank xs" ng-class="'rank-' + api.summoners[0].tierString"></span>
-                    </label>
-                    <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.championMasteryEnabled }">
-                        <input ng-model="subreddit.flair.championMasteryEnabled" ng-disabled="!subreddit.championMasteryEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
-                        <span class="mastery" ng-class="'mastery-' + api.champions[subreddit.championId].level"></span>
-                    </label>
-                </span>
-                <input type="text" ng-model="subreddit.flair.flairText" ng-disabled="subreddit.busy" class="form-control" placeholder="flair text"/>
-                <span class="input-group-btn"><button class="btn btn-success" ng-disabled="subreddit.busy" type="submit"><span class="fa fa-check"></span></button></span>
-            </form>
-        </td>
-        <td>
-            <img class="champion" champ-img="api.champions[subreddit.championId].identifier"
-                 alt="{{ api.champions[subreddit.championId].name }}" title="{{ api.champions[subreddit.championId].name }}"/>
-            <a href="#" ng-href="http://www.reddit.com/r/{{ subreddit.name }}" target="_blank">/r/<span ng-bind="subreddit.name"></span></a>
-            <span class="hint" ng-if="subreddit.adminOnly" ng-tooltip="right,This subreddit is only visible to Flair Bot admins."><span class="fa fa-shield"></span></span>
-        </td>
-        <td>
-            <span class="mastery" ng-class="'mastery-' + api.champions[subreddit.championId].level" title="Level {{ api.champions[subreddit.championId].level }}"></span>
-            <span class="prestige" ng-class="'prestige-' + api.champions[subreddit.championId].prestige"></span>
+        <tr ng-repeat="subreddit in api.subreddits | orderBy:'api.champions[subreddit.championId].points':true track by subreddit.id">
+            <td>
+                <form ng-init="flairData = subreddit.flair" ng-submit="updateSubredditFormSubmit(flairData, subreddit)" class="flair-toggles input-group input-group-sm">
+                    <span class="input-group-btn">
+                        <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.rankEnabled }">
+                            <input ng-model="flairData.rankEnabled" ng-disabled="!subreddit.rankEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
+                            <span class="rank xs" ng-class="'rank-' + api.summoners[0].tierString"></span>
+                        </label>
+                        <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.championMasteryEnabled }">
+                            <input ng-model="flairData.championMasteryEnabled" ng-disabled="!subreddit.championMasteryEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
+                            <span class="mastery" ng-class="'mastery-' + api.champions[subreddit.championId].level"></span>
+                        </label>
+                        <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.prestigeEnabled }">
+                            <input ng-model="flairData.prestigeEnabled" ng-disabled="!subreddit.prestigeEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
+                            <span class="prestige" ng-class="'prestige-' + (api.champions[subreddit.championId].prestige / 1000)"></span>
+                        </label>
+                    </span>
+                    <input type="text" ng-model="subreddit.flair.flairText" ng-disabled="subreddit.busy" class="form-control" placeholder="flair text"/>
+                    <span class="input-group-btn"><button class="btn btn-success" ng-disabled="subreddit.busy" type="submit"><span class="fa fa-check"></span></button></span>
+                </form>
+            </td>
+            <td>
+                <img class="champion" champ-img="api.champions[subreddit.championId].identifier"
+                     alt="{{ api.champions[subreddit.championId].name }}" title="{{ api.champions[subreddit.championId].name }}"/>
+                <a href="#" ng-href="http://www.reddit.com/r/{{ subreddit.name }}" target="_blank">/r/<span ng-bind="subreddit.name"></span></a>
+                <span class="hint" ng-if="subreddit.adminOnly" ng-tooltip="right,This subreddit is only visible to Flair Bot admins."><span class="fa fa-shield"></span></span>
+            </td>
+            <td>
+                <span class="mastery" ng-class="'mastery-' + api.champions[subreddit.championId].level" title="Level {{ api.champions[subreddit.championId].level }}"></span>
+                <span class="prestige" ng-class="'prestige-' + (api.champions[subreddit.championId].prestige / 1000)"></span>
 
-            <span ng-bind="api.champions[subreddit.championId].points | number"></span> / 
-            <span ng-bind="api.champions[subreddit.championId].nextPrestige / 1000 | number"></span>k
-        </td>
-    </tr>
+                <span ng-bind="api.champions[subreddit.championId].points | number"></span> / 
+                <span ng-bind="api.champions[subreddit.championId].nextPrestige / 1000 | number"></span>k
+            </td>
+        </tr>
     </tbody>
-    <tfoot>
-    <tr ng-hide="api.subreddits.length">
-        <td colspan="5">No subreddits linked.</td>
-    </tr>
-    </tfoot>
 </table>
 
 <div class="modal pop-in" id="modal-confirm-delete" ng-controller="DeleteController">
@@ -121,7 +120,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" ng-disabled="busy">&times;</button>
-                <h4 class="modal-title">Register Summoner</h4>
+                <h4 class="modal-title">Add Summoner</h4>
             </div>
             <div class="modal-body">
                 <div class="modal-wizard">
