--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -60,7 +60,7 @@
                                     </li>
                                 }
                                 <li>
-                                    <a href="@Url.Action("about", "login")">About</a>
+                                    <a href="https://championmains.github.io/Pyrobot/">About <span class="fa fa-external-link-square"></span></a>
                                 </li>
                                 @if (User.IsInRole("admin") || User.IsInRole("moderator"))
                                 {
