--- a/ChampionMains.Pyrobot/Content/css/profile.scss
+++ b/ChampionMains.Pyrobot/Content/css/profile.scss
@@ -130,6 +130,7 @@ $ranks: unranked bronze silver gold platinum diamond master challenger;
     width: 70px;
     height: 70px;
     vertical-align: middle;
+    display: inline-block;
 }
 .rank.sm {
     width: 35px;
