--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -126,7 +126,7 @@
                 <div class="modal-wizard">
                     <div class="modal-wizard-step" ng-class="{'slide-left': code}">
                         <p>This dialog will allow you to link your summoner to your Reddit account.</p>
-                        <p>Linking your summoner will allow you to display a ranked flair on qualifying sub-Reddits.</p>
+                        <p>Linking your summoner will allow you to display a ranked flair on qualifying subreddits.</p>
                         <form class="form-horizontal">
                             <div class="form-group">
                                 <label for="summonerName" class="col-sm-4 control-label">Summoner Name</label>
@@ -153,7 +153,7 @@
                             <strong>Almost Done!</strong>
                         </p>
                         <p>
-                            Validate your summoner by changing a <em>rune page</em> to:
+                            Validate your summoner by renaming a <em>rune page</em> to:
                         </p>
                         <blockquote ng-bind="code"></blockquote>
                     </div>
