--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -25,7 +25,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>@(Page.Title ?? "Reddit Ranked Flairs")</title>
+        <title>@(Page.Title ?? "/r/ChampionMains Flairs")</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="~/Content/css/bootswatch.css">
@@ -41,7 +41,7 @@
             <div class="row">
                 <header>
                     <div class="col-md-6">
-                        <h1>Ranked Reddit Flairs</h1>
+                        <h1>/r/ChampionMains Flairs</h1>
                     </div>
                     <div class="col-md-6">
                         <nav>
@@ -77,7 +77,7 @@
             @RenderBody()
 
             <footer class="footer">
-                <p>Ranked Reddit Flairs isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</p>
+                <p>/r/ChampionMains Flairs  isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</p>
             </footer>
         </div>
     </body>
