--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/_master.cshtml";
-    Page.Title = "Profile";
+    //Page.Title = "Profile";
     Page.Angular = "Profile";
 }
 
