adding google analytics

--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -30,7 +30,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="~/Content/css/bootswatch.css">
         <link rel="stylesheet" href="~/Content/css/site.scss">
-        
+
+        <script src="~/Content/js/ga.js"></script>
+
         <script src="~/Content/js/jquery.min.js"></script>
         @if (Page.Angular != null) { <script src="~/Content/js/angular.min.js"></script> }
 
