--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/Content/css/profile.scss">
     <script>window.app = angular.module('Profile', []);</script>
 
-    <!-- datadragon leech -->
+    <!-- datadragon jsonp -->
     <script>var Riot = { DDragon: { m: {} } };</script>
     <script src="http://ddragon.leagueoflegends.com/realms/na.js"></script>
 
