load realm data using generic protocol

--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -10,7 +10,7 @@
 
     <!-- datadragon jsonp -->
     <script>var Riot = { DDragon: { m: {} } };</script>
-    <script src="http://ddragon.leagueoflegends.com/realms/na.js"></script>
+    <script src="//ddragon.leagueoflegends.com/realms/na.js"></script>
 
     <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="~/Content/js/angular-services.js"></script>
