--- a/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/_subreddits.cshtml
+++ b/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/_subreddits.cshtml
@@ -1,8 +1,4 @@
-﻿@using System.Configuration
-@{
-    var modUserName = ConfigurationManager.AppSettings["reddit.modUserName"];
-}
-<div id="subreddits-panel" class="control-panel" ng-controller="SubRedditsController">
+﻿<div id="subreddits-panel" class="control-panel" ng-controller="SubredditsController">
     <button type="button">
         <i class="fa fa-bars"></i> Link a Sub
     </button>
