--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ChampionMains.Pyrobot.Models
 
-<h1 class="text-center"><span class="rank" ng-class="'rank-' + api.summonerService[0].tierString"></span> /u/@User.Identity.Name</h1>
+<h1 class="text-center"><span class="rank" ng-class="'rank-' + api.summoners[0].tierString"></span> /u/@User.Identity.Name</h1>
 
 <button type="button" class="btn btn-primary" ng-click="registerSummoner()">
     <i class="fa fa-plus"></i> Add Summoner
@@ -17,7 +17,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="summoner in filteredSummoners = (api.summonerService | filter:'!hidden' | orderBy:'totalPoints':true) track by summoner.id">
+        <tr ng-repeat="summoner in filteredSummoners = (api.summoners | filter:'!hidden' | orderBy:'totalPoints':true) track by summoner.id">
             <td>
                 <div class="btn-group btn-group-xs">
                     <button class="btn btn-default" href="#" ng-click="refreshSummoner(summoner)"><span class="fa fa-refresh"></span></button>
@@ -64,7 +64,7 @@
                     <span class="input-group-btn">
                         <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.rankEnabled }">
                             <input ng-model="flairData.rankEnabled" ng-disabled="!subreddit.rankEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
-                            <span class="rank xs" ng-class="'rank-' + api.summonerService[0].tierString"></span>
+                            <span class="rank xs" ng-class="'rank-' + api.summoners[0].tierString"></span>
                         </label>
                         <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.championMasteryEnabled }">
                             <input ng-model="flairData.championMasteryEnabled" ng-disabled="!subreddit.championMasteryEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
