--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -31,6 +31,26 @@
         <link rel="stylesheet" href="~/Content/css/bootswatch.css">
         <link rel="stylesheet" href="~/Content/css/site.scss">
 
+        <!-- favicons -->
+        <link rel="apple-touch-icon" sizes="57x57" href="~/Content/icons/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="~/Content/icons/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="~/Content/icons/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="~/Content/icons/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="~/Content/icons/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="~/Content/icons/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="~/Content/icons/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="~/Content/icons/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="~/Content/icons/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="~/Content/icons/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="~/Content/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="~/Content/icons/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="~/Content/icons/favicon-16x16.png">
+        <link rel="manifest" href="~/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="~/Content/icons/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+
+        <!-- scripts -->
         <script src="~/Content/js/ga.js"></script>
 
         <script src="~/Content/js/jquery.min.js"></script>
