--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -66,15 +66,15 @@
             <td>
                 <form ng-init="flairData = subreddit.flair" ng-submit="updateSubredditFormSubmit(flairData, subreddit)" class="flair-toggles input-group input-group-sm">
                     <span class="input-group-btn">
-                        <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.rankEnabled }">
-                            <input ng-model="flairData.rankEnabled" ng-disabled="!subreddit.rankEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
+                        <label class="btn btn-default" ng-if="subreddit.rankEnabled">
+                            <input ng-model="flairData.rankEnabled" ng-disabled="subreddit.busy" type="checkbox" autocomplete="off" />
                             <span class="rank xs" ng-class="'rank-' + (api.summoners | orderObjectBy:'tier':true)[0].tierString"></span>
                         </label>
-                        <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.championMasteryEnabled }">
+                        <label class="btn btn-default" ng-if="subreddit.championMasteryEnabled">
                             <input ng-model="flairData.championMasteryEnabled" ng-disabled="!subreddit.championMasteryEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
                             <span class="mastery" ng-class="'mastery-' + api.champions[subreddit.championId].level"></span>
                         </label>
-                        <label class="btn btn-default" ng-class="{ 'disabled': !subreddit.prestigeEnabled }">
+                        <label class="btn btn-default" ng-if="subreddit.prestigeEnabled">
                             <input ng-model="flairData.prestigeEnabled" ng-disabled="!subreddit.prestigeEnabled || subreddit.busy" type="checkbox" autocomplete="off" />
                             <span class="prestige" ng-class="'prestige-' + (api.champions[subreddit.championId].prestige / 1000)"></span>
                         </label>
