--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>/r/ChampionMains Flairs</title>
+    <title>/r/ChampionMains Flairs - {{ page.title }}</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/darkly/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header class="container text-center">
       <h1><a href="http://championmains-pyrobot.azurewebsites.net/">/r/ChampionMains Flairs</a></h1>
-      <h4>Documentation</h4>
+      <h4>{{ page.title }}</h4>
     </header>
     <div class="container content">{{ content }}</div>
     <hr />
