change to use bower

--- a/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/index.cshtml
+++ b/ChampionMains.Pyrobot/Areas/AdminPanel/Views/AdminDefault/index.cshtml
@@ -6,23 +6,19 @@
         <meta name="viewport" content="width=device-width">
         <title>Admin Panel - Reddit Ranked Flairs</title>
 
-        <link rel="stylesheet" href="~/Content/Styles/normalize.less">
+        <link rel="stylesheet" href="~/content/css/normalize.less">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="~/Content/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="~/content/bootstrap/css/bootstrap.min.css">
 
-        <link rel="stylesheet" href="~/Content/Styles/modal.less">
-        <link rel="stylesheet" href="~/Content/Styles/admin.less">
-        
+        <script src="~/content/js/jquery.min.js"></script>
+        <script src="~/content/bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/content/js/angular.js"></script>
+        <script src="~/content/js/angular-resource.js"></script>
 
-        <script src="~/Content/js/jquery.min.js"></script>
-        <script src="~/Content/bootstrap/js/bootstrap.min.js"></script>
-        <script src="~/Content/js/angular.js"></script>
-        <script src="~/Content/js/angular-resource.js"></script>
-
-        <script src="~/Content/js/modal.js"></script>
-        <script src="~/Content/js/admin.js"></script>
-        <script src="~/Content/js/admin/subscriptions.js"></script>
-        <script src="~/Content/js/admin/eventlog.js"></script>
+        <script src="~/content/js/modal.js"></script>
+        <script src="~/content/js/admin.js"></script>
+        <script src="~/content/js/admin/subscriptions.js"></script>
+        <script src="~/content/js/admin/eventlog.js"></script>
     </head>
     <body ng-controller="MainController">
         <header>
