--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -12,9 +12,9 @@
     <script>var Riot = { DDragon: { m: {} } };</script>
     <script src="//ddragon.leagueoflegends.com/realms/na.js"></script>
 
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <script src="~/Content/js/angular-services.js"></script>
-    <script src="~/Content/js/profile.js"></script>
+    <script src="~/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/content/js/angular-services.js"></script>
+    <script src="~/content/js/profile.js"></script>
 }
 
 @{ Html.RenderPartial("_summoners"); }
