--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -10,9 +10,9 @@
         angularController = $"ng-controller=\"MainController\"";
     }
 }
+
 @functions
 {
-
     MvcHtmlString NoEscape(string s)
     {
         return new MvcHtmlString(s);
@@ -28,33 +28,33 @@
         <title>@(Page.Title ?? "/r/ChampionMains Flairs")</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="~/Content/css/bootswatch.css">
-        <link rel="stylesheet" href="~/Content/css/site.scss">
+        <link rel="stylesheet" href="~/content/css/bootswatch.css">
+        <link rel="stylesheet" href="~/content/css/site.scss">
 
         <!-- favicons -->
-        <link rel="apple-touch-icon" sizes="57x57" href="~/Content/icons/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="~/Content/icons/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="~/Content/icons/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="~/Content/icons/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="~/Content/icons/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="~/Content/icons/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="~/Content/icons/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="~/Content/icons/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="~/Content/icons/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192" href="~/Content/icons/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="~/Content/icons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="~/Content/icons/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="~/Content/icons/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="~/content/icons/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="~/content/icons/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="~/content/icons/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="~/content/icons/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="~/content/icons/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="~/content/icons/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="~/content/icons/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="~/content/icons/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="~/content/icons/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="~/content/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="~/content/icons/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="~/content/icons/favicon-16x16.png">
         <link rel="manifest" href="~/manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="~/Content/icons/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="~/content/icons/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
         <!-- scripts -->
-        <script src="~/Content/js/ga.js"></script>
+        <script src="~/content/js/ga.js"></script>
 
-        <script src="~/Content/js/jquery.min.js"></script>
-        @if (Page.Angular != null) { <script src="~/Content/js/angular.min.js"></script> }
+        <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
+        @if (Page.Angular != null) { <script src="~/bower_components/angular/angular.min.js"></script> }
 
         @RenderSection("head", false)
     </head>
@@ -76,7 +76,7 @@
                                     <li>
                                         @using (Html.BeginForm("logout", "Login"))
                                         {
-                                            //@Html.AntiForgeryToken();
+                                            @Html.AntiForgeryToken()
                                             <button type="submit">Log Out</button>
                                         }
                                     </li>
