working on better flair display

--- a/ChampionMains.Pyrobot/content/css/profile.scss
+++ b/ChampionMains.Pyrobot/content/css/profile.scss
@@ -152,3 +152,8 @@ $ranks: unranked bronze silver gold platinum diamond master challenger;
 .prestige {
     color: #fd0;
 }
+
+iframe {
+    border: none;
+    width: 100%;
+}
